fixed alignment of "Clear Screen" button

--- a/assets/css/paper.css
+++ b/assets/css/paper.css
@@ -118,3 +118,7 @@ header {
 .links img{
 	margin-bottom: -5px;
 }
+
+#clear{
+	margin-right: 10px;
+}
